# Compiler

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Config/include/: ConfigOptimizer.h
Config/src/: ConfigOptimizer.cpp
ErrorHandle/include/: ErrorCategory.h  ErrorPrint.h
ErrorHandle/src/: ErrorCategory.cpp  ErrorPrint.cpp
LLVM/include/: GenerateIR.h  OptimizeIR.h  instanceof.h
LLVM/include/LLVMSymbol/: SymbolCalculate.h  SymbolValue.h
LLVM/include/generate/: LLVMExp.h  LLVMGenerate.h
LLVM/include/optimize/: GVN.h  LLVMOptimizerInit.h  MemToReg.h  OptimizerInit.h
LLVM/include/optimize/Tool/: ActiveVarAnalysis.h  ConstFold.h  DCE.h
LLVM/include/optimize/data_structure/: CfgGraph.h  DominantTree.h
LLVM/include/type/: IRName.h  IRPreName.h  IRType.h
LLVM/include/type/irType/: IRArray.h  IRBlock.h  IRBool.h  IRChar.h  IRInt.h  IRPointer.h  IRVoid.h
LLVM/include/value/: Value.h
LLVM/include/value/architecture/: BasicBlock.h  ConstString.h  ConstValue.h  Module.h  Param.h
LLVM/include/value/architecture/data_structure/: InitVar.h  Loop.h
LLVM/include/value/architecture/user/: Function.h  GlobalValue.h  GlobalVariable.h  Instruction.h
LLVM/include/value/architecture/user/instruction/: AllocaInstruction.h  BrInstruction.h  CalculateInstruction.h  CallInstruction.h  GetelementptrInstruction.h  IcmpInstruction.h  JumpInstruction.h  LoadInstruction.h  PhiInstruction.h  ReturnInstruction.h  StoreInstruction.h  TruncInstruction.h  ZextInstruction.h
LLVM/include/value/architecture/user/instruction/DeletePhiInstruction/: PCInstruction.h  PhiMoveInstruction.h
LLVM/include/value/architecture/user/instruction/IOInstruction/: IOGetChar.h  IOGetInt.h  IOInstruction.h  IOPutCh.h  IOPutInt.h  IOPutStr.h
LLVM/include/value/user/: Use.h  User.h
LLVM/src/: GenerateIR.cpp  OptimizeIR.cpp
LLVM/src/LLVMSymbol/: SymbolCalculate.cpp  SymbolValue.cpp
LLVM/src/generate/: LLVMExp.cpp  LLVMGenerate.cpp
LLVM/src/optimize/: GVN.cpp  LLVMOptimizerInit.cpp  MemToReg.cpp  OptimizerInit.cpp
LLVM/src/optimize/Tool/: ActiveVarAnalysis.cpp  ConstFold.cpp  DCE.cpp
LLVM/src/optimize/data_structure/: CfgGraph.cpp  DominantTree.cpp
LLVM/src/type/: IRName.cpp  IRPreName.cpp  IRType.cpp
LLVM/src/type/irType/: IRArray.cpp  IRBlock.cpp  IRBool.cpp  IRChar.cpp  IRInt.cpp  IRPointer.cpp  IRVoid.cpp
LLVM/src/value/: Value.cpp
LLVM/src/value/architecture/: BasicBlock.cpp  ConstString.cpp  ConstValue.cpp  Module.cpp  Param.cpp
LLVM/src/value/architecture/data_structure/: InitVar.cpp  Loop.cpp
LLVM/src/value/architecture/user/: Function.cpp  GlobalValue.cpp  GlobalVariable.cpp  Instruction.cpp
LLVM/src/value/architecture/user/instruction/: AllocaInstruction.cpp  BrInstruction.cpp  CalculateInstruction.cpp  CallInstruction.cpp  GetelementptrInstruction.cpp  IcmpInstruction.cpp  JumpInstruction.cpp  LoadInstruction.cpp  PhiInstruction.cpp  ReturnInstruction.cpp  StoreInstruction.cpp  TruncInstruction.cpp  ZextInstruction.cpp
LLVM/src/value/architecture/user/instruction/DeletePhiInstruction/: PCInstruction.cpp  PhiMoveInstruction.cpp
LLVM/src/value/architecture/user/instruction/IOInstruction/: IOGetChar.cpp  IOGetInt.cpp  IOInstruction.cpp  IOPutCh.cpp  IOPutInt.cpp  IOPutStr.cpp
LLVM/src/value/user/: Use.cpp  User.cpp
Lexer/include/: FileProcess.h  Lexer.h  TokenType.h
Lexer/src/: FileProcess.cpp  Lexer.cpp  TokenType.cpp
Mips/include/: MipsGenerate.h  OptimizeMips.h
Mips/include/Register/: RegisterController.h  RegisterDistribute.h  RegisterTool.h
Mips/include/generate/: MipsCell.h  MipsContent.h
Mips/include/optimize/: MipsOptimizerInit.h  deletePhi.h
Mips/include/structure/: DataSegment.h  MipsStructure.h  Register.h  Segment.h  TextSegment.h
Mips/include/structure/data/: AsciizStructure.h  ByteStructure.h  DataMipsStructure.h  SpaceStructure.h  WordStructure.h
Mips/include/structure/text/: MipsBlock.h
Mips/include/structure/text/MipsInstruction/: Annotation.h  BTypeInstruction.h  ITypeInstruction.h  JInstruction.h  JalInstruction.h  LSTypeInstruction.h  MTypeInstruction.h  RTypeInstruction.h  SyscallInstruction.h
Mips/include/structure/text/PseudoInstruction/: LaInstruction.h  LiInstruction.h  MoveInstruction.h
Mips/src/: MipsGenerate.cpp  OptimizeMips.cpp
Mips/src/Register/: RegisterController.cpp  RegisterDistribute.cpp  RegisterTool.cpp
Mips/src/generate/: MipsCell.cpp  MipsContent.cpp
Mips/src/optimize/: MipsOptimizerInit.cpp  deletePhi.cpp
Mips/src/structure/: DataSegment.cpp  MipsStructure.cpp  Register.cpp  Segment.cpp  TextSegment.cpp
Mips/src/structure/data/: AsciizStructure.cpp  ByteStructure.cpp  DataMipsStructure.cpp  SpaceStructure.cpp  WordStructure.cpp
Mips/src/structure/text/: MipsBlock.cpp
Mips/src/structure/text/MipsInstruction/: Annotation.cpp  BTypeInstruction.cpp  ITypeInstruction.cpp  JInstruction.cpp  JalInstruction.cpp  LSTypeInstruction.cpp  MTypeInstruction.cpp  RTypeInstruction.cpp  SyscallInstruction.cpp
Mips/src/structure/text/PseudoInstruction/: LaInstruction.cpp  LiInstruction.cpp  MoveInstruction.cpp
Parser/include/: Parser.h  ParserTree.h  TokenScanner.h
Parser/src/: Parser.cpp  ParserTree.cpp  TokenScanner.cpp
Symbol/include/: Symbol.h  SymbolHandle.h
Symbol/src/: Symbol.cpp  SymbolHandle.cpp
